modules/try_this/nacl.tf
resource "aws_network_acl" "rule_100" {
  vpc_id = aws_vpc.main.id
  subnet_ids = ["${aws_subnet.pub_01.id}", "${aws_subnet.pub_02.id}", "${aws_subnet.pub_03.id}", "${aws_subnet.pub_04.id}", "${aws_subnet.pub_05.id}"]

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  egress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  tags = {
    Name = "Pub_NACL"
  }
}
